# PyNanny

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docker/: Dockerfile
src/pynanny/: nanny.py  settings.py  video.py
tests/: test_video.py
