[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "pynanny"
authors = [
    {name = "Ryan York", email = "rcy10@gmail.com"},
    {name = "Ryan Smith", email = "ryanmsmith251@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
classifiers = []
dynamic = ["version"]

# Install dependencies on an as-needed basis
dependencies = [
    "torch>=2",
    "torchvision",
    "pydantic>=2",
    "pydantic-settings",
    "eval-type-backport",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]
all = [
    "pynanny[dev]",
]

[tool.black]
line-length = 88

[tool.mypy]
files = "pynanny/"
check_untyped_defs = "true"
ignore_missing_imports = "true"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pynanny/ --cov-report term-missing --cov-fail-under 80"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
ignore = ["B905", "E501"]
line-length = 88
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 18